--- a/Documentation/latex/class_drzewo.tex
+++ b/Documentation/latex/class_drzewo.tex
@@ -73,7 +73,7 @@ bez korzenia o rozmiarze 0.~\newline
 {\footnotesize\ttfamily template$<$typename T $>$ \\
 \hyperlink{class_drzewo}{Drzewo}$<$ T $>$\+::\hyperlink{class_drzewo}{Drzewo} (\begin{DoxyParamCaption}\item[{const T \&}]{value }\end{DoxyParamCaption})\hspace{0.3cm}{\ttfamily [inline]}}
 
-Konstruktor z wartością typu T określonego szablonem.~\newline
+Konstruktor z parametrem typu T określonego szablonem.~\newline
 Tworzy drzewo o rozmiarze 1 i korzeniu o wartości~\newline
 podanej jako parametr. \mbox{\Hypertarget{class_drzewo_a88fdcfad4e56e0053e34d493f656f61f}\label{class_drzewo_a88fdcfad4e56e0053e34d493f656f61f}} 
 \index{Drzewo@{Drzewo}!Drzewo@{Drzewo}}
